--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-asgiref<=3.5.2
-backports.zoneinfo<=0.2.1
-Django<=4.1.3
-djangorestframework<=3.14.0
-pytz<=2022.6
-sqlparse<=0.4.3
+asgiref==3.5.2
+backports.zoneinfo==0.2.1
+Django>=4.0.0,<4.1.3
+django-dotenv
+djangorestframework
+mysqlclient==2.1.1
+pytz==2022.6
+sqlparse==0.4.3
+
