--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 staticfiles-cdn/
 
 .DS_Store
-bin/
+venv/bin/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -19,7 +19,7 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
+venv/lib/
 lib64/
 parts/
 sdist/
