--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,9 @@
 asgiref==3.5.2
-black==22.12.0
-click==8.1.3
-Django==4.1.4
+backports.zoneinfo==0.2.1
+Django>=4.0.0,<4.1.3
 django-cors-headers==3.13.0
-django-dotenv==1.4.2
-djangorestframework==3.14.0
-djangorestframework-simplejwt==5.2.2
-mypy-extensions==0.4.3
+django-dotenv
+djangorestframework
 mysqlclient==2.1.1
-pathspec==0.10.3
-platformdirs==2.6.0
-PyJWT==2.6.0
 pytz==2022.6
 sqlparse==0.4.3
-tomli==2.0.1
-typing==3.7.4.3
