--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,22 @@
 asgiref==3.5.2
+autopep8==2.0.0
 backports.zoneinfo==0.2.1
-Django>=4.0.0,<4.1.3
+black==22.12.0
+click==8.1.3
+Django==4.1.3
+django-colorfield==0.8.0
 django-cors-headers==3.13.0
-django-dotenv
-djangorestframework
+django-dotenv==1.4.2
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
+mypy-extensions==0.4.3
 mysqlclient==2.1.1
+pathspec==0.10.3
+Pillow==9.3.0
+platformdirs==2.6.0
+pycodestyle==2.10.0
+PyJWT==2.6.0
 pytz==2022.6
 sqlparse==0.4.3
-django-colorfield==0.8.0
+tomli==2.0.1
+typing-extensions==4.4.0
