--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ name = "gyst"
 version = "0.1.0"
 description = "Habit Tracker Api"
 authors = ["Mariusz Dąbal <mariusz9dabal@gmail.com>", "Dobromir Matuszak <matuszak.d92@gmail.com>", "Maciej Łatosz <Amacedmace@gmail.com>"]
+readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.8"
@@ -13,6 +14,7 @@ mysqlclient = "^2.1.1"
 django-colorfield = "^0.8.0"
 django-dotenv = "^1.4.2"
 black = "^22.12.0"
+djangorestframework-simplejwt = "^5.2.2"
 
 
 [tool.poetry.group.dev.dependencies]
