--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Install poetry
-        run: pipx install poetry
+      - run: pipx install poetry
       - uses: actions/setup-python@v4
         with:
           python-version: "3.8.0 - 3.10.0"
