--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -14,6 +14,6 @@ jobs:
         python-version: '3.9'
         cache: 'poetry'
     - name: Install dependencies
-    - run: poetry install --no-interaction
+      run: poetry install --no-interaction
     - name: Run Black
-    - run: poetry run black .
+      run: poetry run black .
