--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -5,9 +5,9 @@ on: [push]
 jobs:
   lint:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: psf/black@stable
+#     steps:
+#       - uses: actions/checkout@v3
+#       - uses: psf/black@stable
       
   test:
     needs: lint
