--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -5,8 +5,8 @@ on: [push]
 jobs:
   lint:
     runs-on: ubuntu-latest
-#     steps:
-#       - uses: actions/checkout@v3
+    steps:
+      - uses: actions/checkout@v3
 #       - uses: psf/black@stable
       
   test:
