--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -16,9 +16,13 @@ jobs:
       mysql:
         image: mysql:5.7
         env:
-          MYSQL_ROOT_PASSWORD: test
-          MYSQL_DATABASE: test
-        ports: ["3306:3306"]
+          MYSQL_DATABASE: test_db
+          MYSQL_USER: user
+          MYSQL_PASSWORD: password
+          MYSQL_ROOT_PASSWORD: rootpassword
+        ports:
+          - 33306:3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
     steps:
     - uses: actions/checkout@v3
     - name: Install poetry
@@ -31,10 +35,3 @@ jobs:
       run: poetry install --no-interaction
     - name: Run Tests
       run: poetry run python3 manage.py test --noinput
-      env:
-        DBENGINE: django.db.backends.mysql
-        DBNAME: test
-        DBUSER: root
-        DBPASSWORD: test
-        DBHOST: 127.0.0.1
-        DBPORT: 3306
