--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -14,15 +14,14 @@ jobs:
     runs-on: ubuntu-latest
     services:
       mysql:
-        image: mysql:5.7
+        image: mysql:latest
+        ports:
+          - 3306
         env:
-          MYSQL_DATABASE: test_db
           MYSQL_USER: user
           MYSQL_PASSWORD: password
-          MYSQL_ROOT_PASSWORD: rootpassword
-        ports:
-          - 33306:3306
-        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+          MYSQL_DATABASE: test
+          MYSQL_ROOT_PASSWORD: password
     steps:
     - uses: actions/checkout@v3
     - name: Install poetry
