--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -12,16 +12,20 @@ jobs:
   test:
     needs: lint
     runs-on: ubuntu-latest
+    
     services:
-      mysql:
-        image: mysql:latest
-        ports:
-          - 3306
+      database:
+        image: mysql:8.0
         env:
-          MYSQL_USER: user
-          MYSQL_PASSWORD: password
-          MYSQL_DATABASE: test
-          MYSQL_ROOT_PASSWORD: password
+          MYSQL_ROOT_PASSWORD: root
+        ports:
+          - 3306:3306
+        options: --tmpfs /var/lib/mysql
+    env:
+      DB_HOST: 127.0.0.1
+      DB_USER: root
+      DB_PASSWORD: root
+      
     steps:
     - uses: actions/checkout@v3
     - name: Install poetry
