--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ django-colorfield = "^0.8.0"
 django-dotenv = "^1.4.2"
 black = "^22.12.0"
 djangorestframework-simplejwt = "^5.2.2"
+django-filter = "^22.1"
 
 
 [tool.poetry.group.dev.dependencies]
